force-app/main/default/objects/Projects_and_Resources__c/Projects_and_Resources__c.object-meta.xml
<CustomObject>
    <description>Projects and Resources</description>
    <label>Projects and Resources</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Projects and Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects and Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>