force-app/main/default/objects/Projects_and_Resources__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Resource</description>
    <inlineHelpText>Resource</inlineHelpText>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Projects and Resources</relationshipLabel>
    <relationshipName>Projects_and_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>