force-app/main/default/objects/Projects_and_Resources__c/fields/Resource_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Resource_End_Date__c</fullName>
    <description>End date</description>
    <inlineHelpText>End date</inlineHelpText>
    <label>Resource End Date</label>
    <type>Date</type>
</CustomField>