force-app/main/default/objects/Projects_and_Resources__c/fields/Resource_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Resource_Start_Date__c</fullName>
    <description>Start date</description>
    <inlineHelpText>Start Date</inlineHelpText>
    <label>Resource Start Date</label>
    <type>Date</type>
</CustomField>